--- a/WebContent/0301_sw/responsive menu.css
+++ b/WebContent/0301_sw/responsive menu.css
@@ -63,6 +63,7 @@
 
 #chk {
   position: absolute;
+  /* static 없는 부모태그 기준 움직임 */
   visibility: hidden;
   z-index: -1111;
 }
@@ -75,6 +76,7 @@
 
   .menu {
     position: fixed;
+    /* 화면 기준으로 무조건 고정 */
     width: 100%;
     height: 100vh;
     background: #333333ee;
@@ -84,8 +86,11 @@
     text-align: center;
     padding: 80px 0;
     line-height: normal;
-    transition: 0.5s;
+    transition: 0.7s;
+    transition-property: all;
+    /* transition-duration: initial; */
     /* transition-timing-function: ease; */
+    z-index: 3;
   }
 
   .menu a {
