--- a/WebContent/0316/kurly/responsive menu.css
+++ b/WebContent/0316/kurly/responsive menu.css
@@ -126,7 +126,7 @@
 .col {
   flex: 25%;
   padding: 10px;
-  max-width: 280px;
+  max-width: 250px;
   box-sizing: border-box;
   background: cyan;
   border: 1px solid red;
@@ -134,7 +134,7 @@
 
 .table {
   background: whitesmoke;
-  padding: 40px 20px;
+  padding: 0;
   font-family: sans-serif;
   position: relative;
   overflow: hidden;
@@ -152,7 +152,7 @@
 }
 
 .table ul li {
-  padding: 10px 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -172,7 +172,7 @@
   color: #2a3a50;
   border: 2px solid #2a3a50;
   border-radius: 15px;
-  padding: 5px 10px;
+  padding: 0;
   text-transform: uppercase;
   font-size: 14px;
   transition: 0.2s linear;
