--- a/WebContent/0312_sw/sign_in.css
+++ b/WebContent/0312_sw/sign_in.css
@@ -50,8 +50,8 @@
   min-width: 300px;
   box-sizing: border-box;
   /* -------------dev option---------------- */
-  /* background: cyan;
-  border: 1px solid red; */
+  /* background: cyan; */
+  /* border: 1px solid red; */
 }
 
 .bar {
@@ -73,6 +73,7 @@ input {
   border: 2px solid gray;
 }
 
+input[type="button"]:hover,
 input[type="submit"]:hover {
   border: 2px solid yellow;
   background: black;
@@ -113,28 +114,31 @@ input[type="num"]:focus {
   line-height: 60px;
   vertical-align: middle;
   /* -------------dev option---------------- */
-  /* color: purple;
-  background: black; */
+  /* color: purple; */
+  /* background: black; */
 }
 
 .label {
   width: 150px;
   height: 40px;
   top: 50%;
+  margin-left: 15px;
   font-size: large;
   transition: 0.3s;
   font-weight: 500;
   line-height: 40px;
   vertical-align: middle;
   /* -------------dev option---------------- */
-  /* color: purple;
-  background: black; */
+  /* color: purple; */
+  /* background: black; */
 }
 .flex_box input[type="num"] {
-  width: 70px;
+  min-width: 70px;
+  width: 30%;
 }
 
-.flex_box input[type="submit"] {
+.flex_box input[type="submit"],
+.flex_box input[type="button"] {
   width: 130px;
   border: 2px solid gray;
   border-radius: 24px;
